--- a/src/main/resources/Fxml/Professor/Professor.fxml
+++ b/src/main/resources/Fxml/Professor/Professor.fxml
@@ -1,10 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.acb.ams.Controllers.Professor.ProfessorControler"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../Styles/ProfessorView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acb.ams.Controllers.Professor.ProfessorControler">
+    <AnchorPane prefHeight="720.0" prefWidth="1280.0">
+        <BorderPane prefHeight="720.0" prefWidth="1280.0">
+            <left>
+                <VBox fx:id="ProffesorMenu" alignment="TOP_CENTER" prefHeight="690.0" prefWidth="200.0" spacing="10.0" styleClass="menu-profesor" BorderPane.alignment="CENTER">
+                    <BorderPane.margin>
+                        <Insets />
+                    </BorderPane.margin>
+                    <padding>
+                        <Insets top="30.0" />
+                    </padding>
+                    <FontAwesomeIconView glyphName="USER" size="100" styleClass="icono-perfil" />
+                    <Label fx:id="NombreProfesor" styleClass="nombre-profesor" text="Mr. Sosa" />
+                    <Button fx:id="btnDashboard" mnemonicParsing="false" styleClass="boton-menu" text="Dashboard" />
+                    <Button fx:id="btnCalificaciones" mnemonicParsing="false" styleClass="boton-menu" text="Notas" />
+                    <Button fx:id="btnAsistencias" mnemonicParsing="false" styleClass="boton-menu" text="Asistencias" />
+                    <Button fx:id="btnCriterios" mnemonicParsing="false" styleClass="boton-menu" text="Criterios" />
+                    <Button fx:id="btnLogout" mnemonicParsing="false" styleClass="boton-menu" text="LogOut" />
+                </VBox>
+            </left>
+            <top>
+                <AnchorPane prefHeight="30.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+                    <Label layoutX="493.0" layoutY="6.0" text="AMS - Profesor" />
+                </AnchorPane>
+            </top>
+            <center>
+                <AnchorPane fx:id="Main" prefHeight="690.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
+                    <AnchorPane fx:id="ProfessorActividades" prefHeight="690.0" prefWidth="1080.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <VBox prefHeight="690.0" prefWidth="1080.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <padding>
+                                <Insets left="20.0" right="20.0" top="20.0" />
+                            </padding>
+                            <Label text="Curso: " />
+                            <ComboBox fx:id="cmbCursos" prefWidth="150.0" styleClass="combo-curso" />
+                            <HBox prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+                                <Label text="Nombre de la Actividad" />
+                                <TextField fx:id="NombreActividad" prefHeight="25.0" prefWidth="250.0" styleClass="campo-texto" />
+                                <Label text="Fecha: " />
+                                <DatePicker fx:id="FechaActividad" />
+                                <Label text="Criterio:" />
+                                <ComboBox fx:id="CriterioActividad" prefWidth="150.0" styleClass="combo-criterio" />
+                            </HBox>
+                            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
+                                <Button fx:id="btnCrearActividad" alignment="CENTER" mnemonicParsing="false" styleClass="boton-crear" text="Crear Actividad" />
+                                <Button fx:id="btnActualizarActividad" mnemonicParsing="false" styleClass="boton-actualizar" text="Actualizar Actividad" />
+                                <Button fx:id="btnLimpiar" mnemonicParsing="false" styleClass="boton-limpiar" text="Limpiar" />
+                            </HBox>
+                            <TableView fx:id="TablaCalificaciones" prefHeight="350.0" prefWidth="1040.0" styleClass="tabla-calificaciones">
+                                <columns>
+                                    <TableColumn fx:id="NombreEstudiante" prefWidth="254.0" text="Estudiante" />
+                                    <TableColumn fx:id="NotaDefinitiva" minWidth="70.0" prefWidth="70.0" text="Definitiva" />
+                                    <TableColumn fx:id="Actividadi" minWidth="70.0" prefWidth="70.0" text="Actividad i" />
+                                </columns>
+                            </TableView>
+                            <Button fx:id="btnGuardarNotas" mnemonicParsing="false" styleClass="boton-guardar" text="Guardar" />
+                        </VBox>
+                    </AnchorPane>
+                    <AnchorPane fx:id="ProfessorAsistencias" layoutX="10.0" layoutY="10.0" prefHeight="690.0" prefWidth="1068.0" visible="false">
+                        <VBox prefHeight="690.0" prefWidth="1080.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <padding>
+                                <Insets left="20.0" right="20.0" top="20.0" />
+                            </padding>
+                            <HBox prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+                                <Label text="Curso: " />
+                                <ComboBox fx:id="cmbCursosAsis" prefWidth="150.0" styleClass="combo-curso" />
+                                <Label text="Fecha: " />
+                                <DatePicker fx:id="FechaAsistencia" />
+                            </HBox>
+                            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
+                                <Button fx:id="btnCrearAsistencia" alignment="CENTER" mnemonicParsing="false" styleClass="boton-crear" text="Crear Asistencia" />
+                                <Button fx:id="btnCancelar" mnemonicParsing="false" styleClass="boton-eliminar" text="Cancelar" />
+                            </HBox>
+                            <TableView fx:id="TablaAsistencia" prefHeight="350.0" prefWidth="1040.0" styleClass="tabla-asistencia">
+                                <columns>
+                                    <TableColumn fx:id="NombreEstudianteAsis" prefWidth="254.0" text="Estudiante" />
+                                    <TableColumn fx:id="PorcentajeAsistencia" minWidth="70.0" prefWidth="70.0" text="Asistencia" />
+                                    <TableColumn fx:id="PorcentajeInasistencia" minWidth="70.0" prefWidth="81.0" text="Inasistencias" />
+                                    <TableColumn fx:id="Asistencia" prefWidth="75.0" text="Día,Fecha" />
+                                </columns>
+                            </TableView>
+                            <Button fx:id="btnGuardarAsistencia" mnemonicParsing="false" styleClass="boton-guardar" text="Guardar" />
+                        </VBox>
+                    </AnchorPane>
+                    <AnchorPane fx:id="ProfessorCriterios" layoutX="14.0" layoutY="10.0" prefHeight="700.0" prefWidth="1080.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <VBox layoutX="36.0" layoutY="-11.0" prefHeight="700.0" prefWidth="1080.0" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <padding>
+                                <Insets left="20.0" right="20.0" top="20.0" />
+                            </padding>
+                            <Label text="Curso: " />
+                            <ComboBox fx:id="cmbCursoCriterio" prefWidth="150.0" styleClass="combo-curso" />
+                            <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1060.0" spacing="15.0">
+                                <Label text="Nombre del criterio" />
+                                <TextField fx:id="NombreCriterio" styleClass="campo-texto" />
+                                <Label text="Peso del criterio" />
+                                <TextField fx:id="PesoCriterio" styleClass="campo-texto" />
+                                <Label text="Descripcción" />
+                                <TextField fx:id="DescripccionCriterio" prefWidth="407.0" styleClass="campo-texto" />
+                            </HBox>
+                            <HBox prefHeight="42.0" prefWidth="1060.0" spacing="30.0">
+                                <Button fx:id="btnCrearCriterio" mnemonicParsing="false" styleClass="boton-crear" text="Crear" />
+                                <Button fx:id="btnActualizar" mnemonicParsing="false" styleClass="boton-actualizar" text="Actualizar" />
+                                <Button fx:id="btnLimpiarForm" mnemonicParsing="false" styleClass="boton-limpiar" text="Limpiar" />
+                                <Button fx:id="btnEliminarCriterio" mnemonicParsing="false" styleClass="boton-eliminar" text="Eliminar" />
+                            </HBox>
+                            <TableView fx:id="Criterios" prefHeight="200.0" prefWidth="200.0" styleClass="tabl">
+                                <columns>
+                                    <TableColumn fx:id="colNombreCriterio" prefWidth="146.0" text="Nombre del criterio" />
+                                    <TableColumn fx:id="colPesoCriterio" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" text="Peso (%)" />
+                                    <TableColumn fx:id="colDescripCriterio" maxWidth="800.0" prefWidth="800.0" text="Descripcción" />
+                                </columns>
+                            </TableView>
+                        </VBox>
+                    </AnchorPane>
+                    <AnchorPane fx:id="ProffesorDashboard" layoutY="48.0" prefHeight="700.0" prefWidth="1080.0" stylesheets="@../../Styles/ProfessorView.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                </AnchorPane>
+            </center>
+        </BorderPane>
+    </AnchorPane>
+</StackPane>
