--- a/src/main/resources/Fxml/Professor/Professor.fxml
+++ b/src/main/resources/Fxml/Professor/Professor.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../Styles/ProfessorView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acb.ams.Controllers.Professor.ProfessorControler">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../../Styles/ProfessorView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acb.ams.Controllers.Professor.ProfessorControler">
     <AnchorPane prefHeight="720.0" prefWidth="1280.0">
         <BorderPane prefHeight="720.0" prefWidth="1280.0">
             <left>
@@ -42,7 +42,7 @@
             </top>
             <center>
                 <AnchorPane fx:id="Main" prefHeight="690.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
-                    <AnchorPane fx:id="ProfessorActividades" prefHeight="690.0" prefWidth="1080.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <AnchorPane fx:id="ProfessorActividades" prefHeight="690.0" prefWidth="1080.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <VBox prefHeight="690.0" prefWidth="1080.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <padding>
                                 <Insets left="20.0" right="20.0" top="20.0" />
@@ -73,7 +73,7 @@
                         </VBox>
                     </AnchorPane>
                     <AnchorPane fx:id="ProfessorAsistencias" layoutX="10.0" layoutY="10.0" prefHeight="690.0" prefWidth="1068.0">
-                        <VBox prefHeight="690.0" prefWidth="1080.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <VBox prefHeight="690.0" prefWidth="1080.0" spacing="20.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <padding>
                                 <Insets left="20.0" right="20.0" top="20.0" />
                             </padding>
@@ -83,7 +83,7 @@
                                 <Label text="Fecha: " />
                                 <DatePicker fx:id="FechaAsistencia" />
                             </HBox>
-                            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
+                            <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" spacing="20.0" visible="false">
                                 <Button fx:id="btnCrearAsistencia" alignment="CENTER" mnemonicParsing="false" styleClass="boton-crear" text="Crear Asistencia" />
                                 <Button fx:id="btnCancelar" mnemonicParsing="false" styleClass="boton-eliminar" text="Cancelar" />
                             </HBox>
@@ -128,7 +128,7 @@
                             </TableView>
                         </VBox>
                     </AnchorPane>
-                    <AnchorPane fx:id="ProffesorDashboard" layoutY="48.0" prefHeight="700.0" prefWidth="1080.0" stylesheets="@../../Styles/ProfessorView.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    <AnchorPane fx:id="ProffesorDashboard" layoutY="48.0" prefHeight="700.0" prefWidth="1080.0" stylesheets="@../../Styles/ProfessorView.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                 </AnchorPane>
             </center>
         </BorderPane>
