--- a/src/main/resources/Fxml/Admin/AdminUserView.fxml
+++ b/src/main/resources/Fxml/Admin/AdminUserView.fxml
@@ -1,79 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" stylesheets="@../../Styles/AdminMainView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acb.ams.Controllers.Admin.AdminUsersController">
-   <VBox fx:id="mainContainer" prefHeight="720.0" prefWidth="540.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <padding>
-         <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
-      </padding>
-      <Label text="Datos Generales de Usuarios">
-         <VBox.margin>
-            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-         </VBox.margin>
-      </Label>
-      <Label text="Tipo de Usuario: " />
-      <ComboBox fx:id="tipoUsuarioComboBox" maxWidth="-Infinity" prefWidth="200.0" promptText="seleccionar" />
-      <Label text="Número de identidad: " />
-      <TextField fx:id="identificacionTxt" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="200.0" promptText="1234567890" />
-      <Label text="Tipo de identidad: " />
-      <ComboBox fx:id="tipoIdTxt" maxHeight="-Infinity" minHeight="-Infinity" prefWidth="150.0" promptText="seleccionar" />
-      <Label text="Nombres: " />
-      <TextField fx:id="nombresTxt" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0" promptText="PRIMER NOMBRE SEGUNDO NOMBRE" />
-      <Label text="Apellidos: " />
-      <TextField fx:id="apellidosTxt" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0" promptText="PATERNO MATERNO" />
-      <Label text="Dirección:" />
-      <TextField fx:id="direccionTxt" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0" promptText="MI DIRECCION" />
-      <Label text="Barrio:" />
-      <TextField fx:id="barrioTxt" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0" promptText="MI BARRIO" />
-      <Label text="Ciudad: " />
-      <TextField fx:id="ciudadTxt" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0" promptText="MI CIUDAD" />
-      <Label text="Correo electrónico: " />
-      <TextField fx:id="correoTxt" maxWidth="-Infinity" prefWidth="300.0" promptText="tunombre@gmail.com" />
-      <Label text="Celular:" />
-      <TextField fx:id="celularTxt" maxWidth="-Infinity" prefWidth="300.0" promptText="30000000" />
-      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="80.0">
-         <Button fx:id="btnGuardar" mnemonicParsing="false" styleClass="guardarButton" stylesheets="@../../Styles/AdminMainView.css" text="Guardar" />
-         <Button fx:id="btnCancelar" mnemonicParsing="false" styleClass="cancelarButton" text="Cancelar" />
-      </HBox>
-   </VBox>
-   <VBox fx:id="studentBox" disable="true" layoutX="540.0" prefHeight="720.0" prefWidth="540.0" spacing="10.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="540.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <padding>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-      <Label text="Matrícula del estudiante" />
-      <Label text="Fecha de matrícula:" />
-      <DatePicker fx:id="fechaMatriculaPicker" prefWidth="200.0" />
-      <Label text="Curso: " />
-      <ComboBox fx:id="cursoComboBox" prefWidth="200.0" promptText="seleccionar" />
-   </VBox>
-   <VBox fx:id="professorBox" layoutX="540.0" layoutY="6.0" prefHeight="720.0" prefWidth="540.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="540.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <padding>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-      <Label text="Contrato del profesor" />
-      <Label text="Asignaturas:" />
-      <ListView fx:id="asignaturasListView" prefHeight="200.0" prefWidth="200.0" />
-      <Label text="Fecha de contratación: " />
-      <DatePicker fx:id="fechaContratacionPicker" />
-   </VBox>
-   <VBox fx:id="acudienteBox" layoutX="540.0" prefHeight="720.0" prefWidth="540.0" spacing="5.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="540.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <padding>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-      <Label text="Relación de acudientes" />
-      <Label text="Estudiante:" />
-      <ComboBox prefWidth="150.0" promptText="seleccionar" />
-      <Label text="Relación:" />
-      <TextField maxWidth="-Infinity" prefWidth="300.0" promptText="ej: Papá, Abuela, Tio" />
-   </VBox>
+<AnchorPane fx:id="mainPane" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../../Styles/AdminMainView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acb.ams.Controllers.Admin.AdminUsersController">
+   <Label layoutX="112.0" layoutY="383.0" styleClass="label-titles" text="Datos Generales de Usuarios" />
+   <Label layoutX="22.0" layoutY="420.0" text="Tipo de Usuario: " />
+   <ComboBox fx:id="tipoUsuarioComboBox" layoutX="133.0" layoutY="417.0" maxWidth="-Infinity" prefWidth="200.0" promptText="Seleccionar" />
+   <Label layoutX="22.0" layoutY="502.0" text="Número de identidad: " />
+   <TextField fx:id="identificacionTxt" layoutX="159.0" layoutY="498.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="200.0" promptText="1234567890" />
+   <Label layoutX="22.0" layoutY="461.0" text="Tipo de identidad: " />
+   <ComboBox fx:id="tipoIdTxt" layoutX="134.0" layoutY="458.0" maxHeight="-Infinity" minHeight="-Infinity" prefWidth="150.0" promptText="Seleccionar" />
+   <Label layoutX="20.0" layoutY="543.0" text="Nombres: " />
+   <TextField fx:id="nombresTxt" layoutX="133.0" layoutY="538.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="235.0" promptText="PRIMER NOMBRE SEGUNDO NOMBRE" />
+   <Label layoutX="20.0" layoutY="583.0" text="Apellidos: " />
+   <TextField fx:id="apellidosTxt" layoutX="133.0" layoutY="578.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="235.0" promptText="PATERNO MATERNO" />
+   <Label layoutX="408.0" layoutY="583.0" text="Dirección:" />
+   <TextField fx:id="direccionTxt" layoutX="499.0" layoutY="578.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="208.0" promptText="MI DIRECCION" />
+   <Label layoutX="408.0" layoutY="543.0" text="Departamento: " />
+   <Label layoutX="405.0" layoutY="504.0" text="Ciudad: " />
+   <Label layoutX="406.0" layoutY="462.0" text="Correo:" />
+   <TextField fx:id="correoTxt" layoutX="459.0" layoutY="458.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="243.0" promptText="tunombre@gmail.com" />
+   <Label layoutX="406.0" layoutY="420.0" text="Celular:" />
+   <TextField fx:id="celularTxt" layoutX="459.0" layoutY="415.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="150.0" promptText="30000000" />
+   <Label layoutX="21.0" layoutY="619.0" text="Estado:" />
+   <ComboBox fx:id="estadoComboBox" layoutX="134.0" layoutY="616.0" prefWidth="150.0" promptText="Seleccionar" />
+   <Button fx:id="btnGuardar" layoutX="193.0" layoutY="657.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" styleClass="boton-guardar" stylesheets="@../../Styles/AdminMainView.css" text="Guardar">
+      <graphic>
+         <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
+      </graphic>
+   </Button>
+   <Button fx:id="btnEliminar" layoutX="640.0" layoutY="657.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" styleClass="boton-eliminar" text="Eliminar">
+      <graphic>
+         <FontAwesomeIconView glyphName="MINUS" />
+      </graphic>
+   </Button>
+   <Label layoutX="475.0" layoutY="383.0" styleClass="label-titles" text="Datos de Contacto" />
+   <ComboBox fx:id="CiudadesComboBox" layoutX="459.0" layoutY="500.0" prefWidth="150.0" promptText="Seleccionar" />
+   <ComboBox fx:id="DepartamentosComboBox" layoutX="506.0" layoutY="539.0" prefHeight="23.0" prefWidth="194.0" promptText="Seleccionar" />
+   <Button fx:id="btnActualizar" layoutX="303.0" layoutY="657.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" styleClass="boton-actualizar" stylesheets="@../../Styles/AdminMainView.css" text="Actualizar" />
+   <Button fx:id="btnLimpiar" layoutX="419.0" layoutY="657.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" styleClass="boton-limpiar" stylesheets="@../../Styles/AdminMainView.css" text="Limpiar" />
+   <Label layoutX="856.0" layoutY="384.0" styleClass="label-titles" text="Matrícula Estudiante" />
+   <DatePicker layoutX="891.0" layoutY="420.0" prefHeight="29.0" prefWidth="150.0" />
+   <Label layoutX="764.0" layoutY="424.0" text="Fecha de Matricula:" />
+   <Label layoutX="764.0" layoutY="484.0" text="Curso:" />
+   <ComboBox layoutX="821.0" layoutY="480.0" prefWidth="150.0" promptText="Seleccionar" />
+    <AnchorPane fx:id="visualizacionPane" layoutX="14.0" layoutY="14.0" prefHeight="351.0" prefWidth="1080.0" styleClass="pane" stylesheets="@../../Styles/AdminMainView.css" AnchorPane.bottomAnchor="350.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <TableView layoutX="14.0" layoutY="45.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+            <columns>
+                <TableColumn fx:id="columIdentificacion" prefWidth="78.0" text="Identificacion" />
+                <TableColumn fx:id="colTipoId" prefWidth="34.0" text="Tipo" />
+                <TableColumn fx:id="colNombre" prefWidth="119.0" text="Nombres" />
+                <TableColumn fx:id="colApellidos" prefWidth="109.0" text="Apellidos" />
+                <TableColumn fx:id="colRol" prefWidth="88.0" text="Rol" />
+                <TableColumn fx:id="colEstado" prefWidth="49.0" text="Estado" />
+                <TableColumn fx:id="colDepartamento" prefWidth="117.0" text="Departamento" />
+                <TableColumn fx:id="colCiudad" prefWidth="107.0" text="Ciudad" />
+                <TableColumn fx:id="colCelular" prefWidth="90.0" text="Celular" />
+                <TableColumn fx:id="colDireccion" prefWidth="121.0" text="Correo" />
+                <TableColumn fx:id="colCorreo" prefWidth="127.0" text="Direccion" />
+            </columns>
+        </TableView>
+        <TextField fx:id="txtBuscar" layoutX="20.0" layoutY="22.0" prefHeight="27.0" prefWidth="200.0" promptText="Buscar" styleClass="search-field" />
+        <FontAwesomeIconView glyphName="SEARCH" layoutX="28.0" layoutY="40.0" />
+    </AnchorPane>
 </AnchorPane>
