--- a/src/main/resources/Fxml/Student/Dashboard.fxml
+++ b/src/main/resources/Fxml/Student/Dashboard.fxml
@@ -4,13 +4,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" styleClass="dashboard" stylesheets="@../../Styles/DashboardStudent.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.acb.ams.Controllers.Student.DashboardController">
-   <Text fx:id="username" layoutX="53.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="user_name" text="Hola, Alex" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0" />
+   <Text fx:id="saludoNombreTxt" layoutX="53.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="user_name" text="Hola, Alex" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="25.0" />
    <Text layoutX="25.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Mis cursos" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="60.0" />
    <Text layoutX="736.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Promedios" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="60.0" />
    <HBox layoutX="25.0" layoutY="84.0" prefHeight="200.0" prefWidth="850.0" spacing="10.0" styleClass="courses_view" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="80.0">
@@ -26,7 +28,7 @@
             <Insets left="10.0" top="10.0" />
          </VBox.margin>
       </Text>
-      <Label fx:id="average_P1" text="4.5">
+      <Label fx:id="promedio1lbl" text="4.5">
          <VBox.margin>
             <Insets left="20.0" />
          </VBox.margin>
@@ -36,7 +38,7 @@
             <Insets left="10.0" top="10.0" />
          </VBox.margin>
       </Text>
-      <Label fx:id="average_P2" text="4.6">
+      <Label fx:id="promedio2lbl" text="4.6">
          <VBox.margin>
             <Insets left="20.0" />
          </VBox.margin>
@@ -46,7 +48,7 @@
             <Insets left="10.0" top="10.0" />
          </VBox.margin>
       </Text>
-      <Label fx:id="average_P3" text="4.8">
+      <Label fx:id="promedio3lbl" text="4.8">
          <VBox.margin>
             <Insets left="20.0" />
          </VBox.margin>
@@ -56,13 +58,20 @@
             <Insets left="10.0" top="10.0" />
          </VBox.margin>
       </Text>
-      <Label fx:id="average_P4" text="5.0">
+      <Label fx:id="promedio4lbl" text="5.0">
          <VBox.margin>
             <Insets left="20.0" />
          </VBox.margin>
       </Label>
    </VBox>
    <Text layoutX="25.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Actividades" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="300.0" />
-   <ListView layoutX="25.0" layoutY="327.0" prefHeight="200.0" prefWidth="200.0" styleClass="activity_listView" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="325.0" />
    <Label fx:id="loginDate" layoutX="811.0" layoutY="24.0" styleClass="date_lbl" text="Hoy, 4-11-2024" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
+   <TableView layoutX="25.0" layoutY="317.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="320.0">
+     <columns>
+       <TableColumn fx:id="colAsignatura" prefWidth="192.0" text="Asginatura" />
+       <TableColumn fx:id="colActividad" prefWidth="400.0" text="Actividad" />
+         <TableColumn fx:id="colFecha" prefWidth="116.0" text="Fecha" />
+         <TableColumn fx:id="colNota" prefWidth="109.0" text="Nota" />
+     </columns>
+   </TableView>
 </AnchorPane>
