--- a/src/main/resources/Fxml/Student/Student.fxml
+++ b/src/main/resources/Fxml/Student/Student.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.acb.ams.Controllers.Student.StudentController">
-    <left>
-        <fx:include source="StudentMenu.fxml"/>
-    </left>
-    <center>
-        <AnchorPane>
-            <!-- Aquí puedes añadir componentes que se cargarán dinámicamente en el futuro -->
-        </AnchorPane>
-    </center>
+<BorderPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   
+   <left>
+      <fx:include source="StudentMenu.fxml" />
+   </left>
+   <center>
+      <BorderPane fx:id="studentParent" prefHeight="720.0" prefWidth="1080.0">
+           
+        </BorderPane>
+   </center>
 </BorderPane>
